base/cis_policies_v1.10.0/templates/no-internet-access-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: no-internet-access
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
spec:
  crd:
    spec:
      names:
        kind: NoInternetAccess
      validation:
        openAPIV3Schema:
          type: object
          properties: {}
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package nointernetaccess

      violation[{"msg": msg}] {
        containers := [input.review.object.spec.containers, input.review.object.spec.initContainers]
        container := containers[_][_]
        not is_allowed_host(container.image)
        msg := sprintf("Container %v uses image from external registry, which is prohibited: %v", [container.name, container.image])
      }

      violation[{"msg": msg}] {
        containers := [input.review.object.spec.template.spec.containers, input.review.object.spec.template.spec.initContainers]
        container := containers[_][_]
        not is_allowed_host(container.image)
        msg := sprintf("Container %v uses image from external registry, which is prohibited: %v", [container.name, container.image])
      }

      violation[{"msg": msg}] {
        has_internet_access(input.review.object.spec.template.spec.hostNetwork)
        msg := sprintf("Pod is configured to use hostNetwork, which is not allowed: %v", [input.review.object.metadata.name])
      }


      has_internet_access(hostNetwork) {
        hostNetwork == true
      }


      is_allowed_host(image) {
        startswith(image, "localhost")
      }

      is_allowed_host(image) {
        startswith(image, "127.0.0.1")
      }

      is_allowed_host(image) {
        startswith(image, ".cluster.local")
      }
